added english resume 11 pgs

--- a/Chapter4.tex
+++ b/Chapter4.tex
@@ -485,7 +485,7 @@ Word sense induction, while being an unsupervised and thus more flexible task (l
 
 In this subsection we also employ the hypergraph model introduced before to propose a solution to both WSD and WSI tasks, specifically the enrichment of features via fusion techniques.
 
-The WSI method, i.e., the clustering algorithm, we employ is not original, as we will see. Nonetheless, our interest lies on  using a combined representation, which is able to address certain concerns that are not deeply studied, namely the use of heterogeneous context features to solve semantic tasks while reducing the number of parameters compared to similar approaches.  Our method is evaluated with a corpus corresponding to the WSI task of the international workshop of semantic evaluations, edition 2007, or Semeval 2007. 
+The WSI method, i.e., the clustering algorithm, we employ is already found in the literature. Nonetheless, our interest lies on  using a combined representation, which is able to address certain concerns that are not deeply studied, namely the use of heterogeneous context features to solve semantic tasks while reducing the number of parameters compared to similar approaches.  Our method is evaluated with a corpus corresponding to the WSI task of the international workshop of semantic evaluations, edition 2007, or Semeval 2007. 
 
 As shown in Figure \ref{fig:diagmetodoWSD}, the procedure we follow is very similar to that of the previous NER experiments. The difference being the task addressed and the features employed (we find clusters using only lexical and syntactic contexts).
 \begin{figure}[t]
@@ -504,9 +504,9 @@ We discovered a set of successful fusion operations in the previous experiments.
 We use the same set of features from the previous subsection (see \ref{sec:rep_spaces}), except for the standard NER features, that is, those represented by $\mstd$, as they are specifically designed to tackle that task. Consequently, we will experiment with two representation matrices $\mlex$ and $\msyn$.
 
 \paragraph{Learning Methods}
-Regarding the machine learning methods to induce senses, (the WSI part), we employ spectral clustering (as is described previously in Chapter 3, paragraph \ref{par:partitioning_clustering}) on the input matrices in order to automatically discover senses (a cluster is considered a sense). As we noted before, this method require as input a symmetric positive similarity matrix. Given that our fusion operators already may yield similarity matrices (e.g., late fusion of similarity matrices). If that is the case, we use this type of matrix directly as input to the algorithm. Otherwise, we compute the cosine similarity to obtain the corresponding affinity matrix and then use it as input. Similarly, spectral clustering is said to be more efficient if the input matrix is sparse \cite{song2008parallel}. We do not sparsify the matrix, usually done by applying a top-$k$ nearest neighbors selection, as we already apply said selection in certain fusion operators and it then becomes even harder to track the modifications applied to the feature space.
+Regarding the machine learning methods to induce senses, (the WSI part), we employ spectral clustering (as is described previously in Chapter 3, paragraph \ref{par:partitioning_clustering}) on the input matrices in order to automatically discover senses (a cluster is considered a sense). As we noted before, this method require as input a symmetric positive similarity matrix. Our fusion operators may yield similarity matrices (e.g., late fusion of similarity matrices). If that is the case, we use this type of matrix directly as input to the algorithm. Otherwise, we compute the cosine similarity to obtain the corresponding affinity matrix and then use it as input. Similarly, spectral clustering is said to be more efficient if the input matrix is sparse \cite{song2008parallel}. We do not sparsify the matrix, usually done by applying a top-$k$ nearest neighbors selection, as we already apply said selection within certain fusion operators and thus it then becomes  harder to keep track of the modifications applied to the feature space by fusion operations.
 
- Regarding disambiguation, we trivially assign senses to the target word instances according to the number of common words in each cluster and the context words of the target word. In other words, for each test instance of a target word, we select the cluster (sense) with the maximum number of shared words with the current instance context.
+ Regarding sense disambiguation, we trivially assign senses to the target word instances according to the number of common words in each cluster and the context words of the target word. In other words, for each test instance of a target word, we select the cluster (sense) with the maximum number of shared words with the current instance context.
 
 \paragraph{Experiments and Evaluation}
 Having learned the best fusion configuration from the previous task, in these experiments we set to test if the improvements achieved can be transfered into another NLP task, namely Word Sensed Induction and Disambiguation (WSI/WSD). As preprocessing, we simply remove stopwords and tokens with less than three letters. The features we extracted from the tested corpora with the same tools as in the previous task.
@@ -699,7 +699,7 @@ Indeed, contrary to what we reported in the previous NER experiments, the best r
 
 Specifically, regarding supervised recall, the operations $L(\mlex, X_F(\slex,\mlex))$ and $E(\mlex,L(\mlex,X_F(\slex,\mlex)))$ (with a performance of 79.5\%) surpass the MFS baseline (78.7\%), both single feature matrices $\mlex$ and $\msyn$ (79.2\%), and the early fusion trivial operation $E(\mlex,\msyn)$ ( with 78.7\%). Concerning the unsupervised F-measure, we do surpass our two baselines but not the 1c1word competition baseline. While considering this performance metric is harder to determine the best performing model. There are several fusion operations that match the performance of the 1c1word baseline, although the number of clusters produced is very close to one. This is the case of the $X_F(\ssyn,\mlex)$ and $X_S(\ssyn,\slex)$ operators, with 78.9\% F-measure and generating 1.08 and 1.01 clusters respectively. 
 
-In order to determine the best performing operators, that stray away from the trivial baselines, in the following we consider the H-measure, introduced before, to help us identify those systems that perform the best. In Figure \ref{fig:h_measure_semeval2007}, we see the H-measure for each of the fusion operators reported. We calculate the H-measure with $\delta=2.87$, as this is the number of true senses per target word in the Semeval 2007 corpus.  According to this metric, we find the 1F and 2F degree  levels the most interesting. Specifically, $X_F(\slex,\mlex)$, in 1F, is the most performing fusion operator. Indeed, by transferring quality lexical similarities into its same feature matrix, we obtain more useful relations than by using any syntactic data.
+In order to determine the best performing operators, that stray away from the trivial baselines, in the following we consider the H-measure, introduced before, to help us identify those systems that perform the best. In Figure \ref{fig:h_measure_semeval2007}, we see the H-measure for each of the fusion operators reported. We calculate the H-measure with $\delta=2.87$, as this is the number of true senses per target word in the Semeval 2007 test corpus.  According to this metric, we find the 1F and 2F degree  levels the most interesting. Specifically, $X_F(\slex,\mlex)$, in 1F, is the most performing fusion operator. Indeed, by transferring quality lexical similarities into its same feature matrix, we obtain more useful relations than by using any syntactic data.
 On the other had, in second place, the operator $E(\mlex,X_F(\slex,\mlex))$ of the 2F level consists also exclusively on lexical information. While the same operators that outperformed the rest in NER (in the HF level) are not as adequate in this WSI/WSD experiment, we see that most of the feature combination techniques improve over the baselines of the single features and early fusion operations. 
 
 
@@ -793,12 +793,12 @@ With respect to the information contained in the network, we find that few appro
 Formally, the objective of WSI/WSD is the following: given a document $d$ with a set $T$ of  target words $tw \in T$ and the set $C$ with contexts for each target word $ct_{tw}$. 
 Specifically, each paragraph represents the context  of a target word. A target word in a specific context is also called an instance.
 % $tw$. %Each word $tw$ features several $ct$.
-The goal is first to solve the WSI task, that is, automatically determine a list of senses for a given $tw$, and then assign one meaning from this list to each of its instances, the WSD task.
+As described before, the goal is first to solve the WSI task, that is, automatically determine a list of senses for a given $tw$, and then assign one meaning from this list to each of its instances, the WSD task.
 %
 %As described before, WSI  is usually solved following four steps: (1) creation of a linguistic network, (2) determine the level of similarity between nodes within the network, (3) cluster nodes together, thus creating individual senses, and (4)  assign a cluster (sense) to each instance of a target word in the input document (this step amounts to WSD).
 
 
-Our method  is inspired on previous approaches from both \cite{2004.Veronis} and \cite{2007.Klapaftis.UoY}. In Hyperlex,  the graph-based  method presented  in \cite{2004.Veronis}, the main intuition is that co-occurrence networks have small-world properties and thus it is possible to detect and isolate important heavily-connected nodes, called "hubs". These hubs, and their connected nodes represent a sense in itself. 
+Our method  is inspired on previous approaches from both \cite{2004.Veronis} and \cite{2007.Klapaftis.UoY}. In Hyperlex,  the graph-based  method presented  in \cite{2004.Veronis}, the main intuition is that co-occurrence networks have small-world properties and thus it is possible to detect and isolate important heavily-connected nodes, called "hubs". The idea is that these hubs, and their connected nodes, represent a sense themselves. 
 
 Hyperlex performs WSI and WSD using a weighted lexical co-occurrence network. The process is performed for each target word in the document. As a first step, they build a  graph by defining the vertices (the target word node is removed) as the tokens found in the  co-occurring  context of a target word. The edges link two words co-occurring together. Each edge is assigned a weight that decreases as the association frequency of the words increases. The second step consists on iteratively finding the hubs and removing them, along with their adjacent nodes, from the target word graph. Again, the intuition of the method is that these isolated hubs, and their adjacent words, represent a sense of the analyzed word. The third and final step carries out the disambiguation. A new graph is created by adding the target word to the co-occurrence graph. Zero-weighted edges are added between each hub and the target word. A minimum spanning tree is then calculated and the sense component found to have the closest set of nodes is chosen as the target word sense.
 
@@ -1108,9 +1108,9 @@ Concerning the unsupervised F-measure evaluation, in Table \ref{tab:sem2007_PM_u
 \end{figure}
 
 
-In order to have a syntethic perspective of the results of our systems, we show in Figure \ref{fig:h_measure_proposed_semeval2007} the H-measure of our proposed model (using different fusion input matrices) as well as the baseline (1c1word, which is analog to the MFS baseline in terms of supervised recall) and UoY system. According to our measure, the fusion operators outperform again the single features and the early fusion. Namely, $X_F(\slex, \mlex)$ outperforms both independent features $\mlex$, $\msyn$, and $E(\mlex,\msyn)$. It is followed closely by the late cross feature fusion ($L(\mlex, X_F(\slex, \mlex))$) in the 2F level. 
+In order to have a synthetic perspective of the results of our systems, we show in Figure \ref{fig:h_measure_proposed_semeval2007} the H-measure of our proposed model (using different fusion input matrices) as well as the baseline (1c1word, which is analog to the MFS baseline in terms of supervised recall) and UoY system. According to our measure, the fusion operators outperform again the single features and the early fusion. Namely, $X_F(\slex, \mlex)$ outperforms both independent features $\mlex$, $\msyn$, and $E(\mlex,\msyn)$. It is followed closely by the late cross feature fusion ($L(\mlex, X_F(\slex, \mlex))$) in the 2F level. 
 
-What does seems unexpected is that the roles played by the $\msyn$ and $\mlex$ system is inverted regarding to the fusion experiments presented in the previous subsection. Indeed, using our network-based approach the performance of $\msyn$ is considerably larger than that of $\mlex$, whereas using spectral clustering the lexical information outranked (by a small margin) the syntactic information (based on dependencies). Again, we attribute this lack of performance of $\mlex$ to the size of the window employed, which seems to general to detect appropriate senses. While our fusion systems beat the early fusion and independent features baselines, the systems that perform the best do not employ heterogeneous data to do so. Indeed, the best systems that combine the two possible types of features lag behind the best fusion spaces. In most of the cases, as can be seen in the figure towards the center, this is due to the relatively lower number of clusters produced, which tends to reduce the H-measure performance.
+What does seems unexpected is that the roles played by the $\msyn$ and $\mlex$ system is inverted regarding to the fusion experiments presented in the previous subsection. Indeed, using our network-based approach the performance of $\msyn$ is considerably larger than that of $\mlex$, whereas using spectral clustering the lexical information outranked (by a small margin) the syntactic information (based on dependencies). Again, we attribute this lack of performance of $\mlex$ to the size of the window employed, which seems to general to detect appropriate senses. While our fusion systems beat the early fusion and independent features baselines, the systems that perform the best do not employ heterogeneous data to do so. Indeed, the best systems that combine the two possible types of features lag behind the best fusion spaces. In most of the cases, as can be seen in the figure towards the center, this is due to the relatively lower number of clusters produced, which tends to reduce the H-measure performance. This may be due to the nature of the method, which, while using also syntactic data, has a hard time determining hubs within fusion-produced representation spaces. 
 
 
  
