--- a/Thesis.tex
+++ b/Thesis.tex
@@ -52,7 +52,7 @@ I am very grateful with my jury members who accepted to review this work:  Marc 
 
 Thanks to my friends from the lab, Xinyu, Rado and Jairo, for being there and helping me to put things on perspective or to have some beers. Also thanks to the rest of the lab for having me there. 
 
-Special recognition to my Mexican-Spanish friends, Viri, Humberto, Inma, Mónica. All of you were there with me during the bad and good times, and for that I thank you. You are Lyon for me. Also to Claire, for having been part of all of this.
+Special recognition to my Mexican-Spanish friends, Viri, Humberto, Inma, Zaruhi, Mónica. All of you were there with me during the bad and good times, and for that I thank you. You are Lyon for me. Also to Claire, for having been part of all of this.
 
 
 This thesis is the result of a lot of latent effort and love from my mother, father, sister and brother, which directly or indirectly, made, and continue to make, my living so far away manageable. 
