--- a/TitlePage.tex
+++ b/TitlePage.tex
@@ -33,7 +33,7 @@
 \noindent \large 
 \begin{tabular}{ll}
       \textit{Rapporteurs :}	& \textbf{Marc El-Bèze}, Professeur Émérite, Université d'Avignon\\
-				& \textbf{Mathieu Roche}, Maître de Conférences (HDR), CIRAD\\
+				& \textbf{Mathieu Roche}, Chercheur, CIRAD\\
       \textit{Examinatrices :}	& \textbf{Farah Benamara Zitoune}, Maitresse de Conférences (HDR),\\
       &Université Paul Sabatier\\
       & \textbf{Sophie Rosset}, Directrice de Recherche, Université Paris-Sud \\
